--- a/arch/arm64/configs/munch_defconfig
+++ b/arch/arm64/configs/munch_defconfig
@@ -835,3 +835,5 @@ CONFIG_TCP_CONG_BBR=y
 CONFIG_TCP_CONG_BBR2=y
 CONFIG_DEFAULT_BBR2=y
 CONFIG_DEFAULT_TCP_CONG="bbr2"
+CONFIG_IRQ_SBALANCE=y
+CONFIG_SBALANCE_EXCLUDE_CPUS="3,6,7"
